# test

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/adapters/input/: fastapi.py
app/adapters/output/: postgres_repository.py  vllm_client.py
app/core/models/: message.py  user.py
app/core/ports/: dto.py
app/core/ports/input/: get_chat_history.py  health_check.py  send_message.py
app/core/ports/output/: llm_client.py  message_repository.py
app/core/services/: chat_service.py  health_service.py
infrastructure/: utils.py
infrastructure/config/: settings.py
infrastructure/db/: schemas.py
tests/: conftest.py
tests/integration/: test_scenario_1_linear.py  test_scenario_2_linear_multi.py  test_scenario_3_branching.py
tests/load/: Load Test Bottleneck Report.html  locustfile.py  run_load_test.py
tests/load/reports/20260520_203219/: bottleneck_report.html  level_1_users_1.html  level_1_users_1_stats.csv  level_1_users_1_stats_history.csv  level_2_users_2.html  level_2_users_2_stats.csv  level_2_users_2_stats_history.csv  level_3_users_4.html  level_3_users_4_stats.csv  level_3_users_4_stats_history.csv  level_4_users_8.html  level_4_users_8_stats.csv  level_4_users_8_stats_history.csv  level_5_users_16.html  level_5_users_16_stats.csv  level_5_users_16_stats_history.csv  level_6_users_32.html  level_6_users_32_failures.csv  level_6_users_32_stats.csv  level_6_users_32_stats_history.csv  level_7_users_64.html  level_7_users_64_failures.csv  level_7_users_64_stats.csv  level_7_users_64_stats_history.csv  (+4 more)
